alpm-types/src/version/snapshots/pkg_full::parse_error_in_full_version_from_string@case_02_two_epoch.snap
---
source: alpm-types/src/version/pkg_full.rs
---
error: invalid full alpm-package-version
 | 
 | 1:1:foo-1
 |    ^ expected the '-' delimiter that divides the alpm-pkgver and alpm-pkgrel in a full alpm-package-version
